--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
   
   
   </dependencies>
+  
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/meghachinchole</url>
+    </repository>
+  </distributionManagement>
   <build>
     <sourceDirectory>src</sourceDirectory>
     
