--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -1,7 +1,11 @@
 name: Publish package to GitHub Packages
+
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs:
   publish:
     runs-on: ubuntu-latest
